--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,9 @@
       <h3>Sign up for our mailing list!</h3>
       <form>
         <label for="name">Name</label><br>
-        <input type="text" id="name"><br>
+        <input class="form-control" type="text" id="name"><br>
         <label for="email">Email</label><br>
-        <input type="text" id="email"><br>
+        <input class="form-control" type="text" id="email"><br>
         <button>Join the list!</button>
       </form>
     </div>
