--- a/templates/index.html
+++ b/templates/index.html
@@ -214,14 +214,32 @@
     </div>
     <hr />
     <div class="card card-styling">
-      <h3>Sign up for our mailing list!</h3>
-      <form>
-        <label for="name">Name</label><br />
-        <input class="form-control" type="text" id="name" /><br />
-        <label for="email">Email</label><br />
-        <input class="form-control" type="text" id="email" /><br />
-        <button>Join the list!</button>
-      </form>
+      <div class="row align-items">
+        <div class="col">
+          <h3>Sign up for our mailing list!</h3>
+          <form>
+            <label for="name">Name</label><br />
+            <input class="form-control" type="text" id="name" /><br />
+            <label for="email">Email</label><br />
+            <input class="form-control" type="text" id="email" /><br />
+            <button>Join the list!</button>
+          </form>
+        </div>
+        <div class="col">
+          <h3>Join our Patreon!</h3>
+          <form>
+            <label for="card-name">Name</label><br />
+            <input class="form-control" type="text" id="card-name" /><br />
+            <label for="card-number">Credit Card Number</label><br />
+            <input class="form-control" type="number" id="card-number" /><br />
+            <label for="security-code">Security Code  </label>
+            <input class="form-control" type="number" id="security-code" />
+            <label for="expiration-date">Expiration Date</label>
+            <input class="form-control" type="number" id="expiration-date"><br />
+            <button>Sign up!</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
